Update readme and cleanup

--- a/custom_components/cem_monitor/manifest.json
+++ b/custom_components/cem_monitor/manifest.json
@@ -1,10 +1,10 @@
 {
   "domain": "cem_monitor",
-  "name": "CEM Monitor",
+  "name": "CEM Monitoring Integration",
   "version": "0.1.0",
-  "documentation": "https://example.invalid/cem_monitor",
+  "documentation": "https://github.com/eMeF1/ha-cem-monitoring-integration",
   "requirements": [],
-  "codeowners": ["@you"],
+  "codeowners": ["@eMeF1"],
   "iot_class": "cloud_polling",
   "config_flow": true,
   "loggers": ["custom_components.cem_monitor"]
