--- a/custom_components/cem_monitor/manifest.json
+++ b/custom_components/cem_monitor/manifest.json
@@ -6,5 +6,7 @@
   "issue_tracker": "https://github.com/eMeF1/ha-cem-monitoring-integration/issues",
   "dependencies": [],
   "codeowners": ["@eMeF1"],
+  "config_flow": true,
+  "iot_class": "cloud_polling",
   "requirements": []
 }
