--- a/custom_components/cem_monitor/manifest.json
+++ b/custom_components/cem_monitor/manifest.json
@@ -8,5 +8,5 @@
   "issue_tracker": "https://github.com/eMeF1/ha-cem-monitoring-integration/issues",
   "loggers": ["custom_components.cem_monitor"],
   "requirements": [],
-  "version": "0.1.6"
+  "version": "0.2.0b1"
 }
