--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - "v*"
 
+permissions:
+  contents: write
+
 jobs:
   check-version:
     name: Ensure tag matches manifest version
