Update workflow to run tests on all branches
- Run tests on push to any branch (not just main/develop)
- This is a common practice that provides early feedback
- Catches issues before creating a PR
- PRs will still run tests as well

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: Tests
 
 on:
   push:
-    branches: [ main, develop ]
+    # Run on all branches to catch issues early
   pull_request:
-    branches: [ main, develop ]
+    # Run on PRs to any branch
 
 jobs:
   test:
