Refactor: Extract utility functions and rename water coordinator to counter reading coordinator
- Extract duplicate utility functions into shared utils.py module:
  * get_int() - Extract integer from dict with multiple key options
  * get_str() - Extract string from dict with multiple key options
  * get_str_nonempty() - Extract first non-empty string from values
  * slug_int() - Convert integer to slug string
  * slug_text() - Convert text to slug format
  * ms_to_iso() - Convert milliseconds timestamp to ISO format

- Update all files to use centralized utility functions:
  * discovery.py, __init__.py, objects_coordinator.py, meters_coordinator.py
  * config_flow.py, sensor.py, and all coordinator files

- Rename water_coordinator to counter_reading_coordinator:
  * Rename file: water_coordinator.py -> counter_reading_coordinator.py
  * Rename class: CEMWaterCoordinator -> CEMCounterReadingCoordinator
  * Rename API method: get_water_consumption() -> get_counter_reading()
  * Rename constant: WATER_LAST_URL -> COUNTER_LAST_URL
  * Rename variables: water_map -> counter_map, water_refresh -> counter_refresh
  * Update service endpoint: water_last -> counter_last
  * Update all log messages and error messages

This refactoring improves code maintainability and better reflects that the
integration now handles all counter types, not just water meters.

--- a/custom_components/cem_monitor/services.yaml
+++ b/custom_components/cem_monitor/services.yaml
@@ -15,7 +15,7 @@ get_raw:
             - objects
             - meters
             - counters_by_meter
-            - water_last
+            - counter_last
 
     mis_id:
       name: Object ID (mis_id)
@@ -41,7 +41,7 @@ get_raw:
 
     var_id:
       name: Counter ID (var_id)
-      description: Used with the water_last endpoint (optional).
+      description: Used with the counter_last endpoint (optional).
       required: false
       example: 104437
       selector:
