--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Install mypy
         run: |
           python -m pip install --upgrade pip
-          pip install mypy types-all
+          pip install mypy
 
       - name: Run mypy
         run: |
