fix: resolve remaining mypy type errors
- Fix is_401_error return type (avoid returning Any)
- Fix _create_session return type annotation with proper type ignore

All mypy checks now passing

--- a/mypy.ini
+++ b/mypy.ini
@@ -16,6 +16,9 @@ show_error_codes = true
 [mypy-homeassistant.*]
 ignore_missing_imports = true
 
+[mypy-homeassistant.helpers.aiohttp_client]
+ignore_missing_imports = true
+
 [mypy-aiohttp.*]
 ignore_missing_imports = true
 
